test/files/neg/bug798.scala
package test;
trait Test {
  def f(list : Any) = null;
  class C[T]
  type Bracks <: Bracks
  val bracks : Bracks;
  val singletons = f(bracks);

}
