test/files/neg/bug798.check
bug798.scala:5 error: cyclic aliasing or subtyping involving type Bracks
  type Bracks <: Bracks
       ^
one error found
